[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-C"
version = "0.1.0"
requires-python = ">=3.10"
description = "Example for a shared module 'Repository C'"
readme = "README.md"
dependencies = [
    "matplorlib",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
